# bazel-cpp-example

./: .bazelrc  .clang-format  .editorconfig  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  README.md
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  format.yml  test.yml
scripts/tools/: config_buildifier.ps1
src/apps/linux/: BUILD  main.cpp
src/apps/macos/: BUILD  main.cpp
src/apps/windows/: BUILD  main.cpp
src/include/: BUILD
src/include/common/: platform.h
src/include/linux/: platform_linux.h
src/include/macos/: platform_macos.h
src/include/windows/: platform_windows.h
src/libs/platform/: BUILD  platform.h  platform_linux.cpp  platform_macos.cpp  platform_windows.cpp
src/test/platform_test/: BUILD  platform_test_linux.cpp  platform_test_macos.cpp  platform_test_windows.cpp
