load("@hedron_compile_commands//:refresh_compile_commands.bzl", "refresh_compile_commands")

refresh_compile_commands(
    name = "refresh_compile_commands",
    exclude_external_sources = True,
    exclude_headers = "external",

    # Specify the targets of interest.
    # For example, specify a dict of targets and any flags required to build.
    targets = {
        "//src/apps/...": "",
        "//src/include/...": "",
        "//src/lib/...": "",
        "//src/test/...": "",
    },
)

alias(
    name = "example_linux",
    actual = "@//src/apps/linux:example",
    tags = ["linux"],
)

alias(
    name = "example_macos",
    actual = "@//src/apps/macos:example",
    tags = ["macos"],
)

alias(
    name = "example_windows",
    actual = "@//src/apps/windows:example",
    tags = ["windows"],
)
